versioned_docs/version-4.1.x/reference/functions/Get-ADTUserProfiles.mdx
---
id: Get-ADTUserProfiles
title: Get-ADTUserProfiles
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Get the User Profile Path, User Account SID, and the User Account Name for all users that log onto the machine and also the Default User.

## SYNTAX

### All (Default)

```powershell
Get-ADTUserProfiles [-ExcludeNTAccount <NTAccount[]>] [-IncludeSystemProfiles] [-IncludeServiceProfiles]
 [-IncludeIISAppPoolProfiles] [-IncludeEpmProfiles] [-ExcludeDefaultUser] [-LoadProfilePaths]
 [<CommonParameters>]
```

### FilterScript

```powershell
Get-ADTUserProfiles [-FilterScript] <ScriptBlock> [-LoadProfilePaths] [<CommonParameters>]
```

### Specific

```powershell
Get-ADTUserProfiles -SID <SecurityIdentifier[]> [-LoadProfilePaths] [<CommonParameters>]
```

## DESCRIPTION

Get the User Profile Path, User Account SID, and the User Account Name for all users that log onto the machine and also the Default User (which does not log on).

Please note that the NTAccount property may be empty for some user profiles but the SID and ProfilePath properties will always be populated.

## EXAMPLES

### EXAMPLE 1

```powershell
Get-ADTUserProfiles
```

Return the following properties for each user profile on the system: NTAccount, SID, ProfilePath.

### EXAMPLE 2

```powershell
Get-ADTUserProfiles -ExcludeNTAccount CONTOSO\Robot,CONTOSO\ntadmin
```

Return the following properties for each user profile on the system, except for 'Robot' and 'ntadmin': NTAccount, SID, ProfilePath.

### EXAMPLE 3

```powershell
[string[]]$ProfilePaths = Get-ADTUserProfiles | Select-Object -ExpandProperty ProfilePath
```

Return the user profile path for each user on the system.
This information can then be used to make modifications under the user profile on the filesystem.

## PARAMETERS

### -FilterScript

Allows filtration of the returned result by any property in a UserProfile object.

```yaml
Type: ScriptBlock
Parameter Sets: FilterScript
Aliases:

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SID

Specifies the SID to get rather than returning all user profiles.

```yaml
Type: SecurityIdentifier[]
Parameter Sets: Specific
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -ExcludeNTAccount

Specify NT account names in DOMAIN\username format to exclude from the list of user profiles.

```yaml
Type: NTAccount[]
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeSystemProfiles

Include system profiles: SYSTEM, LOCAL SERVICE, NETWORK SERVICE.

```yaml
Type: SwitchParameter
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeServiceProfiles

Include service (NT SERVICE) profiles.

```yaml
Type: SwitchParameter
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeIISAppPoolProfiles

Include IIS AppPool profiles.
Excluded by default as they don't parse well.

```yaml
Type: SwitchParameter
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -IncludeEpmProfiles

Include Endpoint Privilege Management (EPM) profiles.
Excluded by default as they don't parse well.

```yaml
Type: SwitchParameter
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -ExcludeDefaultUser

Exclude the Default User.

```yaml
Type: SwitchParameter
Parameter Sets: All
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -LoadProfilePaths

Load additional profile paths for each user profile.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### PSADT.Types.UserProfileInfo

### Returns a PSADT.Types.UserProfileInfo object with the following properties:
### - NTAccount
### - SID
### - ProfilePath
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTUserProfiles](https://psappdeploytoolkit.com/docs/reference/functions/Get-ADTUserProfiles)
